src/test/06-Errors/error-oneline.txt
error-oneline.ck:1:566: error: 's' has already been defined in the same scope
[1] ...::ms => now; }  Blit s => ADSR e => JCRev r => dac; .5 => s.gain; .05...
                            ^
